--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0"
   },
   "version": "1.0.0",
   "main": "index.js",
