--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
@@ -53,7 +54,8 @@
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   },
   "version": "1.0.0",
   "main": "index.js",
