--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hogwartsProject",
+  "homepage": "https://jordane-kraken.github.io/hogwartsProject-React/",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint --fix src/**/*.js",
     "clean": "rm -rf dist",
@@ -48,6 +51,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
