--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "surge": "^0.21.7"
   },
   "version": "1.0.0",
   "main": "index.js",
